# visdiff-impl

./: .gitignore  README.md  hello.py  pyproject.toml
notebook/: analysis.ipynb  create_dataset.ipynb
src/: data.py  evaluate.py  pipeline.py  proposer.py  ranker.py
